glade: replace GtkHBox and GtkVBox with GtkBox
Both long deprecated.

--- a/src/connection-editor/ce-page-bridge.ui
+++ b/src/connection-editor/ce-page-bridge.ui
@@ -70,7 +70,8 @@
       </packing>
     </child>
     <child>
-      <object class="GtkHBox" id="hbox2">
+      <object class="GtkBox" id="hbox2">
+        <property name="orientation">horizontal</property>
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="spacing">10</property>
@@ -239,7 +240,8 @@
       </packing>
     </child>
     <child>
-      <object class="GtkHBox" id="bridge_forward_delay_box">
+      <object class="GtkBox" id="bridge_forward_delay_box">
+        <property name="orientation">horizontal</property>
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="spacing">4</property>
@@ -280,7 +282,8 @@
       </packing>
     </child>
     <child>
-      <object class="GtkHBox" id="bridge_hello_time_box">
+      <object class="GtkBox" id="bridge_hello_time_box">
+        <property name="orientation">horizontal</property>
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="spacing">4</property>
@@ -383,7 +386,8 @@
       </packing>
     </child>
     <child>
-      <object class="GtkHBox" id="bridge_max_age_box">
+      <object class="GtkBox" id="bridge_max_age_box">
+        <property name="orientation">horizontal</property>
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="spacing">4</property>
@@ -438,7 +442,8 @@
       </packing>
     </child>
     <child>
-      <object class="GtkHBox" id="bridge_ageing_time_box">
+      <object class="GtkBox" id="bridge_ageing_time_box">
+        <property name="orientation">horizontal</property>
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="spacing">4</property>
