--- a/src/connection-editor/ce-page-general.ui
+++ b/src/connection-editor/ce-page-general.ui
@@ -103,7 +103,8 @@
       </packing>
     </child>
     <child>
-      <object class="GtkVBox" id="firewall_zone_vbox">
+      <object class="GtkBox" id="firewall_zone_vbox">
+        <property name="orientation">vertical</property>
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="hexpand">True</property>
