--- a/src/connection-editor/ce-page-wifi.ui
+++ b/src/connection-editor/ce-page-wifi.ui
@@ -66,7 +66,8 @@
     <property name="row_spacing">6</property>
     <property name="column_spacing">6</property>
     <child>
-      <object class="GtkHBox" id="wifi_mtu_hbox">
+      <object class="GtkBox" id="wifi_mtu_hbox">
+        <property name="orientation">horizontal</property>
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="hexpand">True</property>
@@ -118,7 +119,8 @@
       </packing>
     </child>
     <child>
-      <object class="GtkVBox" id="wifi_device_vbox">
+      <object class="GtkBox" id="wifi_device_vbox">
+        <property name="orientation">vertical</property>
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <child>
@@ -175,7 +177,8 @@
       </packing>
     </child>
     <child>
-      <object class="GtkHBox" id="wifi_tx_power_hbox">
+      <object class="GtkBox" id="wifi_tx_power_hbox">
+        <property name="orientation">horizontal</property>
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="hexpand">True</property>
@@ -227,7 +230,8 @@
       </packing>
     </child>
     <child>
-      <object class="GtkHBox" id="wifi_rate_hbox">
+      <object class="GtkBox" id="wifi_rate_hbox">
+        <property name="orientation">horizontal</property>
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="hexpand">True</property>
@@ -279,7 +283,8 @@
       </packing>
     </child>
     <child>
-      <object class="GtkVBox" id="wifi_bssid_vbox">
+      <object class="GtkBox" id="wifi_bssid_vbox">
+        <property name="orientation">vertical</property>
         <property name="visible">True</property>
         <property name="can_focus">False</property>
       </object>
