--- a/src/gsm-unlock.ui
+++ b/src/gsm-unlock.ui
@@ -62,7 +62,8 @@
           </packing>
         </child>
         <child>
-          <object class="GtkHBox" id="hbox7">
+          <object class="GtkBox" id="hbox7">
+            <property name="orientation">horizontal</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="spacing">6</property>
@@ -82,7 +83,8 @@
               </packing>
             </child>
             <child>
-              <object class="GtkVBox" id="vbox3">
+              <object class="GtkBox" id="vbox3">
+                <property name="orientation">vertical</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="spacing">12</property>
@@ -205,14 +207,16 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkHBox" id="progress_hbox">
+                      <object class="GtkBox" id="progress_hbox">
+                        <property name="orientation">horizontal</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="margin_top">6</property>
                         <property name="margin_bottom">6</property>
                         <property name="spacing">6</property>
                         <child>
-                          <object class="GtkVBox" id="spinner_vbox">
+                          <object class="GtkBox" id="spinner_vbox">
+                            <property name="orientation">vertical</property>
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <child>
