--- a/src/8021x.ui
+++ b/src/8021x.ui
@@ -66,7 +66,8 @@
           </packing>
         </child>
         <child>
-          <object class="GtkHBox" id="hbox1">
+          <object class="GtkBox" id="hbox1">
+            <property name="orientation">horizontal</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="margin_start">5</property>
@@ -89,7 +90,8 @@
               </packing>
             </child>
             <child>
-              <object class="GtkVBox" id="vbox1">
+              <object class="GtkBox" id="vbox1">
+                <property name="orientation">vertical</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="spacing">6</property>
@@ -141,7 +143,8 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkVBox" id="security_vbox">
+                      <object class="GtkBox" id="security_vbox">
+                        <property name="orientation">vertical</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="hexpand">True</property>
