--- a/src/connection-editor/ce-ip4-routes.ui
+++ b/src/connection-editor/ce-ip4-routes.ui
@@ -62,7 +62,8 @@
           </packing>
         </child>
         <child>
-          <object class="GtkVBox" id="vbox2">
+          <object class="GtkBox" id="vbox2">
+            <property name="orientation">vertical</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="margin_start">5</property>
@@ -71,7 +72,8 @@
             <property name="margin_bottom">5</property>
             <property name="spacing">6</property>
             <child>
-              <object class="GtkHBox" id="hbox5">
+              <object class="GtkBox" id="hbox5">
+                <property name="orientation">horizontal</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="spacing">6</property>
