--- a/src/connection-editor/ce-page-bond.ui
+++ b/src/connection-editor/ce-page-bond.ui
@@ -130,7 +130,8 @@
       </packing>
     </child>
     <child>
-      <object class="GtkHBox" id="hbox2">
+      <object class="GtkBox" id="hbox2">
+        <property name="orientation">horizontal</property>
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="spacing">10</property>
@@ -245,7 +246,8 @@
       </packing>
     </child>
     <child>
-      <object class="GtkHBox" id="hbox1">
+      <object class="GtkBox" id="hbox1">
+        <property name="orientation">horizontal</property>
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="spacing">4</property>
@@ -393,7 +395,8 @@
       </packing>
     </child>
     <child>
-      <object class="GtkHBox" id="bond_updelay_box">
+      <object class="GtkBox" id="bond_updelay_box">
+        <property name="orientation">horizontal</property>
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="spacing">4</property>
@@ -432,7 +435,8 @@
       </packing>
     </child>
     <child>
-      <object class="GtkHBox" id="bond_downdelay_box">
+      <object class="GtkBox" id="bond_downdelay_box">
+        <property name="orientation">horizontal</property>
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="spacing">4</property>
@@ -511,7 +515,8 @@
       </packing>
     </child>
     <child>
-      <object class="GtkHBox" id="bond_mtu_box">
+      <object class="GtkBox" id="bond_mtu_box">
+        <property name="orientation">horizontal</property>
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="spacing">4</property>
