--- a/src/connection-editor/ce-page-wifi-security.ui
+++ b/src/connection-editor/ce-page-wifi-security.ui
@@ -55,7 +55,8 @@
       </packing>
     </child>
     <child>
-      <object class="GtkVBox" id="wifi_security_vbox">
+      <object class="GtkBox" id="wifi_security_vbox">
+        <property name="orientation">vertical</property>
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <child>
