--- a/src/libnm-gtk/wifi.ui
+++ b/src/libnm-gtk/wifi.ui
@@ -24,7 +24,8 @@
       </row>
     </data>
   </object>
-  <object class="GtkHBox" id="hbox1">
+  <object class="GtkBox" id="hbox1">
+    <property name="orientation">horizontal</property>
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="margin_start">5</property>
@@ -47,7 +48,8 @@
       </packing>
     </child>
     <child>
-      <object class="GtkVBox" id="vbox1">
+      <object class="GtkBox" id="vbox1">
+        <property name="orientation">vertical</property>
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="spacing">6</property>
@@ -73,7 +75,8 @@
             <property name="row_spacing">6</property>
             <property name="column_spacing">12</property>
             <child>
-              <object class="GtkVBox" id="security_vbox">
+              <object class="GtkBox" id="security_vbox">
+                <property name="orientation">vertical</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="hexpand">True</property>
