--- a/src/wireless-security/ws-wpa-eap.ui
+++ b/src/wireless-security/ws-wpa-eap.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.20.0 -->
+<!-- Generated with glade 3.22.1 -->
 <interface>
   <requires lib="gtk+" version="3.10"/>
   <object class="GtkListStore" id="model5">
@@ -57,10 +57,11 @@
           </packing>
         </child>
         <child>
-          <object class="GtkVBox" id="wpa_eap_method_vbox">
+          <object class="GtkBox" id="wpa_eap_method_vbox">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="hexpand">True</property>
+            <property name="orientation">vertical</property>
             <child>
               <placeholder/>
             </child>
