mobile-wizard: don't ask for plan name
We don't need it. All we need is the access technology and possibly an
APN name.

--- a/src/libnma/nma-mobile-wizard.ui
+++ b/src/libnma/nma-mobile-wizard.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.20.2 -->
+<!-- Generated with glade 3.22.1 -->
 <interface domain="nm-applet">
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkTreeStore" id="country_store">
@@ -172,6 +172,7 @@
         <property name="page_type">intro</property>
         <property name="title" translatable="yes">Set up a Mobile Broadband Connection</property>
         <property name="complete">True</property>
+        <property name="has_padding">False</property>
       </packing>
     </child>
     <child>
@@ -228,6 +229,7 @@
       </object>
       <packing>
         <property name="title" translatable="yes">Choose your Provider’s Country or Region</property>
+        <property name="has_padding">False</property>
       </packing>
     </child>
     <child>
@@ -301,55 +303,15 @@
           </packing>
         </child>
         <child>
-          <object class="GtkGrid">
+          <object class="GtkComboBoxText" id="provider_unlisted_type_combo">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="margin_start">25</property>
-            <property name="row_spacing">12</property>
-            <property name="column_spacing">12</property>
-            <child>
-              <object class="GtkComboBoxText" id="provider_unlisted_type_combo">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="active">0</property>
-                <items>
-                  <item id="0" translatable="yes">My provider uses GSM technology (GPRS, EDGE, UMTS, HSPA)</item>
-                  <item id="1" translatable="yes">My provider uses CDMA technology (1xRTT, EVDO)</item>
-                </items>
-              </object>
-              <packing>
-                <property name="left_attach">1</property>
-                <property name="top_attach">1</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkLabel">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Provider:</property>
-                <property name="mnemonic_widget">provider_unlisted_type_combo</property>
-                <property name="xalign">1</property>
-              </object>
-              <packing>
-                <property name="left_attach">0</property>
-                <property name="top_attach">0</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkEntry" id="provider_unlisted_entry">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="width_chars">40</property>
-                <signal name="changed" handler="providers_update_complete" swapped="yes"/>
-              </object>
-              <packing>
-                <property name="left_attach">1</property>
-                <property name="top_attach">0</property>
-              </packing>
-            </child>
-            <child>
-              <placeholder/>
-            </child>
+            <property name="active">0</property>
+            <items>
+              <item id="0" translatable="yes">My provider uses GSM technology (GPRS, EDGE, UMTS, HSPA)</item>
+              <item id="1" translatable="yes">My provider uses CDMA technology (1xRTT, EVDO)</item>
+            </items>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -360,6 +322,7 @@
       </object>
       <packing>
         <property name="title" translatable="yes">Choose your Provider</property>
+        <property name="has_padding">False</property>
       </packing>
     </child>
     <child>
@@ -414,7 +377,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkEntry" id="plan_unlisted_entry">
+          <object class="GtkEntry" id="plan_apn_entry">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="max_length">64</property>
@@ -475,6 +438,7 @@ If you are unsure of your plan please ask your provider for your plan’s APN.</
       </object>
       <packing>
         <property name="title" translatable="yes">Choose your Billing Plan</property>
+        <property name="has_padding">False</property>
       </packing>
     </child>
     <child>
@@ -608,7 +572,6 @@ If you are unsure of your plan please ask your provider for your plan’s APN.</
         </child>
         <child>
           <object class="GtkLabel" id="confirm_connect_after_label">
-            <property name="visible">False</property>
             <property name="width_request">500</property>
             <property name="can_focus">False</property>
             <property name="valign">end</property>
@@ -629,17 +592,11 @@ If you are unsure of your plan please ask your provider for your plan’s APN.</
         <property name="page_type">confirm</property>
         <property name="title" translatable="yes">Confirm Mobile Broadband Settings</property>
         <property name="complete">True</property>
+        <property name="has_padding">False</property>
       </packing>
     </child>
     <child>
       <placeholder/>
-    </child>
-    <child internal-child="action_area">
-      <object class="GtkBox">
-        <property name="can_focus">False</property>
-      </object>
-      <packing>
-      </packing>
     </child>
   </template>
 </interface>
