mobile-wizard: (trivial) rename plan_unlisted_entry
It's the APN entry box. Make the name less confusing.

--- a/src/libnma/nma-mobile-wizard.ui
+++ b/src/libnma/nma-mobile-wizard.ui
@@ -414,7 +414,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkEntry" id="plan_unlisted_entry">
+          <object class="GtkEntry" id="plan_apn_entry">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="max_length">64</property>
