--- a/src/libnma/nma-mobile-wizard.ui
+++ b/src/libnma/nma-mobile-wizard.ui
@@ -286,7 +286,7 @@
         </child>
         <child>
           <object class="GtkRadioButton" id="provider_unlisted_radio">
-            <property name="label" translatable="yes">I can’t find my provider and I wish to enter it _manually:</property>
+            <property name="label" translatable="yes">I can’t find my provider and I wish to set up the connection _manually:</property>
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">False</property>
